@@ -1,6 +1,6 @@
 # ripemd160.test - Copyright (C) 2003 Pat Thoyts <patthoyts@users.sf.net>
 #
-# $Id: ripemd160.test,v 1.5 2005/02/24 03:25:50 patthoyts Exp $
+# $Id: ripemd160.test,v 1.6 2005/10/05 17:07:34 andreas_kupries Exp $
 
 # -------------------------------------------------------------------------
 # Initialise the test package
@@ -82,6 +82,12 @@ set vectors {
 }
 lappend vectors \
     10 [string repeat 1234567890 8] {9b752e45573d4b39f4dbd3323cab82bf63326bfb}
+
+lappend vectors \
+    20 [binary format H* 3627140572635041beaf9c8dfaebd8c9363636363636363636363636363636363636363636363636363636363636363636363636363636363636363636363636] {5cc1e0793bad0c5208f3903a8230a712887fcabd} \
+    21 [binary format H* 3627140572635041beaf9c8dfaebd8c93636363636363636363636363636363636363636363636363636363636363636363636363636363636363636363636] {4ca862aa06c2e42340752534865d20394aea9349} \
+    22 [binary format H* 3627140572635041beaf9c8dfaebd8c936363636363636363636363636363636363636363636363636363636363636363636363636363636363636363636363636] {64d466ca9798f45a60e2a33d2f5436ffa2b1908a} \
+
 
 foreach impl [implementations] {
     select_implementation $impl
